Chapter 13 — Listing 13.6: ComparatorComposition.java Demonstrates: Comparator.comparing, thenComparing, reversed, nullsFirst